Problem with Testinomials header color in Dark Mode has been solved

--- a/style.css
+++ b/style.css
@@ -1243,3 +1243,7 @@ body.active {
     margin-left: -10px;
     border: 1px solid black;
 }
+.white
+{
+    color: #ff523b;
+}
